--- a/app/views/jobapplication_mailer/job_apply.html.erb
+++ b/app/views/jobapplication_mailer/job_apply.html.erb
@@ -53,7 +53,7 @@
  <span style="text-decoration:none;color:#46494d;font-weight:normal">Please review my application here:</span>
     <br><br><br><br>
  <div>
-     <span style="font-family:Helvetica,sans-serif;font-size:20px;padding:10px 20px;background:#fdee1c;text-decoration:none;color:#46494d;font-weight:bold; border: 2px solid black; -webkit-border-radius: 10px; -moz-border-radius: 10px; border-radius: 50px;"><a href="<%= @viewer_url %>" style="color:#46494d;text-decoration:none;margin-right:10px;line-height:19px" target="_blank">My application</a></span>   
+     <span style="font-family:Helvetica,sans-serif;font-size:20px;padding:10px 20px;background:#fdee1c;text-decoration:none;color:#46494d;font-weight:bold; border: 2px solid black; -webkit-border-radius: 10px; -moz-border-radius: 10px; border-radius: 50px;"><a href="http://www.solliceo.com/viewers/<%= @viewer.id %>" style="color:#46494d;text-decoration:none;margin-right:10px;line-height:19px" target="_blank">My application</a></span>   
      <span style="font-family:Helvetica,sans-serif;margin-left:20px;padding:5px 20px;backfround:#e6e6e6;text-decoration:none;color:#46494d;font-weight:bold; border: 2px solid black; -webkit-border-radius: 10px; -moz-border-radius: 10px; border-radius: 50px;"><a href="<%= @file_url %>" style="color:#46494d;font-size:16px;text-decoration:none;" target="_blank">Download CV</a></span>
  </div>
     <br><br>
