apply links and styling in dashboard

--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -16,7 +16,13 @@
   <script type="text/javascript" src="http://www.vicancy.com/solliceo/dashboarddesign/js/webflow.js" defer></script>
 
   <style>
-  	
+  	a {
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: none;
+      color: white;
+    }
   </style>
 </head>
 <body>
