new viewer modal

--- a/app/views/viewers/index.html.erb
+++ b/app/views/viewers/index.html.erb
@@ -16,7 +16,7 @@
             </div>
             <%= link_to '<i class="icon-user" style="margin-left:-5px; margin-top:-1px;"></i>'.html_safe, '#user_edit_form', class: 'button button-secondary button-left', title: 'Jouw Account', rel: 'tooltip', data: {toggle: 'modal', resource: current_user, resource_name: current_user} %>
 
-            <%= link_to 'Nieuwe Sollicitatie', new_viewer_path, class: 'button button-main' %>
+            <%= link_to 'Nieuwe Sollicitatie', '#new_viewer_form', class: 'button button-main', data: {toggle: 'modal'} %>
             
             <a class="button button-right button-secondary" href="http://vicancy.com/solliceo/formulier/" target="_blank"data-toggle="tooltip" title="Video aanmaken"><i class="icon-film" style="margin-left:-5px; margin-top:-1px;"></i></a>
 
@@ -31,16 +31,29 @@
   </div> 
 
   <div id="user_edit_form" class="modal hide fade" tabindex="-1" role="dialog" aria-hidden="true">
-  <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3 id="myModalLabel">Account settings</h3>
+    <div class="modal-header">
+      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+      <h3 id="myModalLabel">Account settings</h3>
+    </div>
+    <div class="modal-body">
+      <%= render partial: 'devise/registrations/edit', locals: {resource: current_user, resource_name: current_user} %>
+    </div>
+    <div class="modal-footer">
+      <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+    </div>
   </div>
-  <div class="modal-body">
-    <%= render partial: 'devise/registrations/edit', locals: {resource: current_user, resource_name: current_user} %>
-  </div>
-  <div class="modal-footer">
-    <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-  </div>
+
+  <div id="new_viewer_form" class="modal hide fade" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-header">
+      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+      <h3 id="myModalLabel">New viewer</h3>
+    </div>
+    <div class="modal-body">
+      <%= render partial: 'form' %>
+    </div>
+    <div class="modal-footer">
+      <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+    </div>
   </div>
 
   
