--- a/app/views/viewers/_edit_form.html.erb
+++ b/app/views/viewers/_edit_form.html.erb
@@ -21,10 +21,25 @@
 				    	<%= file_upload.file_file_name %>
 				    <% end %>
 			    </li>
+			    
 			<% end %>
+
+			<div id="add_file_form">
+				<% @viewer.file_uploads.build %>
+
+				<%= f.fields_for :file_uploads, @viewer.file_uploads.last do |fu| %>
+					<div class="form-inputs">
+						<%= fu.text_field :name, placeholder: "Enter file name" %>
+						<%= fu.file_field :file %>
+					</div>
+				<% end %>
+			</div>
 			
 		</ul>
-		<%= link_to "New file", new_viewer_file_path(@viewer), class: "btn" %>
+		
+		<% unless @viewer.file_uploads.count >= 4 %>
+			<%= link_to "New file", '#', class: "btn", :id => "new_file_button" %>
+		<% end %>
 	</div>
 
 	<div class="form-actions" style="background-color:white;">
