--- a/app/assets/stylesheets/viewer.css.sass
+++ b/app/assets/stylesheets/viewer.css.sass
@@ -13,6 +13,9 @@ body
 	color: #333
 	font-size: 12px
 	line-height: 20px
+	.navbar
+		a
+			font-size: 15px
 	.viewer_masthead
 		padding-top: 0px
 		background-color: #666
