--- a/app/views/viewers/index.html.erb
+++ b/app/views/viewers/index.html.erb
@@ -28,8 +28,8 @@
           </div>
         </div>
         <div class="w-col w-col-8">
-          <h1 class="w-hidden-medium w-hidden-small w-hidden-tiny">Powerfull features, simplified</h1>
-          <h3 class="w-hidden-medium w-hidden-small w-hidden-tiny">Landing your dream job? It's possible now</h3>
+          <h1 class="w-hidden-medium w-hidden-small w-hidden-tiny">Klaar voor actie?</h1>
+          <h3 class="w-hidden-medium w-hidden-small w-hidden-tiny">Gebruik Solliceo. Kom bij je droombaan op gesprek.</h3>
         </div>
       </div>
     </div>
@@ -38,7 +38,7 @@
   <div id="user_edit_form" class="modal hide fade" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-      <h3 id="myModalLabel">Account settings</h3>
+      <h3 id="myModalLabel">Account instellingen</h3>
     </div>
     <div class="modal-body">
       <%= render partial: 'devise/registrations/edit', locals: {resource: current_user, resource_name: current_user} %>
@@ -51,13 +51,13 @@
   <div id="new_viewer_form" class="modal hide fade" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-      <h3 id="myModalLabel">New viewer</h3>
+      <h3 id="myModalLabel">Nieuwe sollicitatie maken</h3>
     </div>
     <div class="modal-body">
       <%= render partial: 'form' %>
     </div>
     <div class="modal-footer">
-      <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+      <button class="btn" data-dismiss="modal" aria-hidden="true">Sluiten</button>
     </div>
   </div>
 
