--- a/app/views/devise/registrations/_edit.html.erb
+++ b/app/views/devise/registrations/_edit.html.erb
@@ -2,14 +2,14 @@
   <%= f.error_notification %>
 
   <div class="form-inputs form-horizontal">
-    <%= f.input :name, :required => true, :autofocus => true %> 
-    <%= f.input :email, :required => true %>
-    <%= f.input :phone, label: "Phone number" %>
-    <%= f.input :linkedin, label: "LinkedIn account", placeholder: "paste your 'public profile' here" %>
-    <%= f.input :twitter, label: "Twitter account", placeholder: "example: @qieter" %>
-    <%= f.input :residence, label: "Residence city" %>
-    <%= f.input :image, label: "Upload a profile image" %>
-    <%= f.input :image_remote_url, label: "or enter a profile image URL" %>    
+    <%= f.input :name, label: 'Naam', :required => true, :autofocus => true %> 
+    <%= f.input :email, label: 'Email', :required => true %>
+    <%= f.input :phone, label: 'Telefoon', placeholder: '06-12345432' %>
+    <%= f.input :linkedin, label: "LinkedIn", placeholder: "copy & paste je 'public profile' hier" %>
+    <%= f.input :twitter, label: "Twitter", placeholder: "bijv: @qieter" %>
+    <%= f.input :residence, label: "Woonplaats", placeholder: 'bijv: Amsterdam' %>
+    <%= f.input :image, label: "Upload een profielfoto" %>
+    <%= f.input :image_remote_url, label: "of gebruik een URL voor je profielfoto", placeholder: 'bijv. je LinkedIn profielfoto' %>    
   </div>
 
   <div style="margin-bottom: 50px;">
@@ -21,9 +21,9 @@
       
       
 
-      <h4>Change password</h4>
-      <%= f.input :password, label: "new password", :autocomplete => "off", :hint => "leave it blank if you don't want to change it", :required => false %>
-      <%= f.input :password_confirmation, :required => false %>
+      <h4>Wijzig wachtwoord</h4>
+      <%= f.input :password, label:"Nieuw wachtwoord", placeholder: 'nieuw wachtwoord', :autocomplete => "off", :hint => "laat open als je dit niet wilt wijzigen", :required => false %>
+      <%= f.input :password_confirmation, placeholder: 'bevestig wachtwoord', :required => false %>
     </div>
   </div>
 
@@ -34,7 +34,7 @@
 
 <h3>Cancel my account</h3>
 
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %>.</p>
+<p>Baan gevonden? :-) <%= link_to "Beeindig mijn account", registration_path(resource_name), :data => { :confirm => "Weet je het zeker? Al je gegevens gaan verloren." }, :method => :delete %>.</p>
 
-<%= link_to "Back", :back %>
+<%= link_to "Terug", :back %>
 
