--- a/app/views/viewers/show.html.erb
+++ b/app/views/viewers/show.html.erb
@@ -61,68 +61,87 @@
 </div>
 
 <div class="w-container viewer_container">
-    <div class="w-row general-info-bar">
-      <div class="w-col w-col-4">
-        <div class="profile-image-section">
-          <img class="profile-image" src="images/P4200460.JPG" height="150" alt="P4200460.JPG">
-        </div>
-        <p><strong>Contact info<br></strong>
-          
-          <% unless @viewer.user.email.blank? %>
-            <a style="color:#333;" href="mailto:<%= @viewer.user.email %>" target="_blank">Email</a><br>
-          <% end %>
-
-          <% unless @viewer.user.phone.blank? %>
-            <%= @viewer.user.phone %><br>
-          <% end %>
-          
-          <% unless @viewer.user.linkedin.blank? %>
-            <a style="color:#333;" href="<%= @viewer.user.linkedin %>" target="_blank">Linkedin</a><br>
-          <% end %>
-
-          <% unless @viewer.user.twitter.blank? %>
-            <a style="color:#333;" href="https://twitter.com/<%= @viewer.user.twitter %>" target="_blank">Twitter</a><br>
-          <% end %>
-
-        </p>
+  <div class="w-row general-info-bar">
+    <div class="w-col w-col-4">
+      <div class="profile-image-section">
+        <img class="profile-image" src="images/P4200460.JPG" height="150" alt="P4200460.JPG">
       </div>
-      <div class="w-col w-col-5">
-        <h5><%= @viewer.title %></h5>
-        <p><em>"<%= @viewer.tagline %>"</em>
-        </p>
-      </div>
-      <div class="w-col w-col-3"></div>
-    </div>
-    <div class="video-section">
-      <div class="w-embed w-video videoplayer" style="padding-top: 56.27659574468085%;">
+      <p><strong>Contact info<br></strong>
         
-        <% if @viewer.user.videoid == 0.0 %>
-          <iframe id="video" src="http://videowizard.webflow.com/" frameborder="0"></iframe>
-        <% else %>
-          <iframe src="http://player.vimeo.com/video/<%= @viewer.user.videoid %>?autoplay=0" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+        <% unless @viewer.user.email.blank? %>
+          <a style="color:#333;" href="mailto:<%= @viewer.user.email %>" target="_blank">Email</a><br>
+        <% end %>
+
+        <% unless @viewer.user.phone.blank? %>
+          <%= @viewer.user.phone %><br>
         <% end %>
         
-      </div>
-    </div>
+        <% unless @viewer.user.linkedin.blank? %>
+          <a style="color:#333;" href="<%= @viewer.user.linkedin %>" target="_blank">Linkedin</a><br>
+        <% end %>
 
-    <div class="w-row about-row">
-<!-- About & Summary      
-      <div class="w-col w-col-4 left-colum">
-        <h4>About</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus
-          id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-      </div>
-      <div class="w-col w-col-8 right-column">
-        <h4><%= @viewer.summary_title %></h4>
-        <p><%= @viewer.summary %></p>
-      </div> 
--->
-    </div><a class="viewer_button" href="#">Download Resume</a>
-    <div class="tabs-section">
-      <div class="w-embed w-iframe tab1">
-        <iframe style="width:100%; height:600px;border:none;" src="https://docs.google.com/document/d/12X81LFSWqdN5vJpMSNW-7HojoNGcESL9g8bDLKwG9_4/pub?embedded=true"></iframe>
-      </div><a class="viewer_button" href="#">Download Resume</a>
+        <% unless @viewer.user.twitter.blank? %>
+          <a style="color:#333;" href="https://twitter.com/<%= @viewer.user.twitter %>" target="_blank">Twitter</a><br>
+        <% end %>
+
+      </p>
     </div>
+    <div class="w-col w-col-5">
+      <h5><%= @viewer.title %></h5>
+      <p><em>"<%= @viewer.tagline %>"</em>
+      </p>
+    </div>
+    <div class="w-col w-col-3"></div>
+  </div>
+  <div class="video-section">
+    <div class="w-embed w-video videoplayer" style="padding-top: 56.27659574468085%;">
+      
+      <% if @viewer.user.videoid == 0.0 %>
+        <iframe id="video" src="http://videowizard.webflow.com/" frameborder="0"></iframe>
+      <% else %>
+        <iframe src="http://player.vimeo.com/video/<%= @viewer.user.videoid %>?autoplay=0" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+      <% end %>
+      
+    </div>
+  </div>
+
+  <div class="w-row about-row">
+<!-- About & Summary      
+    <div class="w-col w-col-4 left-colum">
+      <h4>About</h4>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus
+        id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+    </div>
+    <div class="w-col w-col-8 right-column">
+      <h4><%= @viewer.summary_title %></h4>
+      <p><%= @viewer.summary %></p>
+    </div> 
+-->
+  </div><a class="viewer_button" href="#">Download Resume</a>
+  <div class="tabs-section">
+    <div class="w-embed w-iframe tab1">
+      <iframe style="width:100%; height:600px;border:none;" src="https://docs.google.com/document/d/12X81LFSWqdN5vJpMSNW-7HojoNGcESL9g8bDLKwG9_4/pub?embedded=true"></iframe>
+    </div><a class="viewer_button" href="#">Download Resume</a>
+  </div>
+
+  <div id="content" class="span9">
+    <ul class="nav tabs">
+      <% @viewer.file_uploads.each_with_index do |file, i| %>
+        <li <%== 'class="active"' if i ==0 %>><a href="#file-<%= file.id %>" data-toggle="tab"><%= file.name %></a></li>
+      <% end %>
+    </ul>
+    <div class="tab-content box">
+      <% @viewer.file_uploads.each_with_index do |file, i|  %>
+        <div id="file-<%= file.id %>" class="tab-pane <%== 'active' if i ==0 %>" style="text-align: center;">
+          <iframe src="https://docs.google.com/gview?url=<%= file.file.url %>&embedded=true"></iframe>
+          <div class="btn-group" style="margin:auto; margin-bottom: 10px;">
+            <button class="span6 btn btn-large btn-primary" data-target="#contact-modal" data-toggle="modal">Contact Nu</button>
+            <button class="span6 btn btn-large btn-block" data-target="#attached-files-modal" data-toggle="modal">Download CV</button>
+          </div>
+        </div>
+      <% end %>
+    </div>
+  </div>
 </div>
 
 <!-- New viewer design end-->
