viewer design, clean out salespage

--- a/app/views/devise/registrations/_edit.html.erb
+++ b/app/views/devise/registrations/_edit.html.erb
@@ -32,9 +32,7 @@
   </div>
 <% end %>
 
-<h3>Cancel my account</h3>
+<h3>Verwijder mijn account</h3>
 
 <p>Baan gevonden? :-) <%= link_to "Beeindig mijn account", registration_path(resource_name), :data => { :confirm => "Weet je het zeker? Al je gegevens gaan verloren." }, :method => :delete %>.</p>
-
-<%= link_to "Terug", :back %>
 
