--- a/app/views/viewers/_form.html.erb
+++ b/app/views/viewers/_form.html.erb
@@ -7,7 +7,11 @@
 	</div>
 	
 	<hr>
-	<p>Je kunt tot 4 bestanden uploaden (*.psd/*.doc). Dit zijn bijvoorbeeld je CV, en movitatiebrief:</p>
+	<p>
+		Je kunt tot 4 bestanden uploaden (*.psd/*.doc).<br>
+		Dit zijn bijvoorbeeld je CV en movitatiebrief.<br><br>
+		LET OP: bestandsnaam is vereist
+	</p>
 
 	<div class="files-list">
 		<ul>
