dutchify login and signup

--- a/app/views/pages/_landingpage.html.erb
+++ b/app/views/pages/_landingpage.html.erb
@@ -19,7 +19,7 @@
 
 	<div class="row-fluid" style="margin-top:30px;">
 		<div class="btn-group span4 offset4">
-			<%= link_to "Sign Up Now", new_user_registration_path, class: "btn btn-large btn-inverse span6" %>
+			<%= link_to "Account maken", new_user_registration_path, class: "btn btn-large btn-inverse span6" %>
 			<%= link_to "Login", new_user_session_path, class: "btn btn-large span6"%>
 		</div>    
   </div>
