--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,23 +1,23 @@
 <div class="container" style="height: 100%;">
 <div class="well" style="background-color:#fff; width: 500px;">
   
-<h2>Sign up</h2>
+<h2>Account aanmaken</h2>
 
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), html: { class: 'form-horizontal'}) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :name, :required => true %>
-    <%= f.input :email, :required => true, :autofocus => true %>
-    <%= f.input :password, :required => true %>
-    <%= f.input :password_confirmation, :required => true %>
+    <%= f.input :name, label: 'Naam', :required => true %>
+    <%= f.input :email, label: 'Email', :required => true, :autofocus => true %>
+    <%= f.input :password, label: 'wachtwoord', :required => true %>
+    <%= f.input :password_confirmation, label: 'herhaal wachtwoord', :required => true %>
     </br>
-    <%= f.input :image, label: "Upload an profile image" %>
-    <%= f.input :image_remote_url, label: "or enter a profile image URL" %>
+    <%= f.input :image, label: "Upload een profielfoto" %>
+    <%= f.input :image_remote_url, label: "of gebruik een URL voor je profielfoto", placeholder: 'bijv. je LinkedIn profielfoto' %>
   </div>
 
   <div>
-    <%= f.button :submit, "Sign up", class: "btn btn-primary" %>
+    <%= f.button :submit, "Account aanmaken", class: "btn btn-primary" %>
   </div>
 <% end %>
 
